Fixed alignment on vendor and agent

--- a/main.css
+++ b/main.css
@@ -4,10 +4,10 @@ body {
 }
 
 .input-table {
- border: 2px solid #333333;
- background: #ffffff; 
  width: 100%;
- height: 60%;
+ height: 20%;
 }
+
+
 </style>
 
